[gd_scene load_steps=7 format=3 uid="uid://d2sc4mbovli68"]

[ext_resource type="Script" uid="uid://ccmgvcir3pve6" path="res://Node/UI/GameUI.gd" id="1_aapge"]
[ext_resource type="PackedScene" uid="uid://def6suo0utm66" path="res://Node/UI/BuildingInfoBox.tscn" id="2_je0ey"]
[ext_resource type="Script" uid="uid://hflqxpycjxfu" path="res://Node/UI/BuildingInfoBox.gd" id="3_un1m2"]
[ext_resource type="PackedScene" uid="uid://bksvf870l3tcd" path="res://Node/UI/EntityInfoBox.tscn" id="4_22fib"]
[ext_resource type="Script" uid="uid://dobbjq1ech8ip" path="res://Node/UI/EntityInfoBox.gd" id="5_0hixd"]
[ext_resource type="PackedScene" uid="uid://dq4m0cbjapxge" path="res://Node/UI/TerrainInfoBox.tscn" id="6_d673b"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_aapge")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BuildingInfoBox" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_je0ey")]
layout_mode = 2
script = ExtResource("3_un1m2")

[node name="EntityInfoBox" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_22fib")]
layout_mode = 2
script = ExtResource("5_0hixd")

[node name="TerrainInfoBox" parent="MarginContainer/VBoxContainer" instance=ExtResource("6_d673b")]
layout_mode = 2
